--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.0"
+    "vue-event-calendar": "^1.5.2",
+    "vue-router": "^4.3.0",
+    "vue3-calendar": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
