--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "angular-calendar": "^0.31.0",
     "express": "^4.18.2",
+    "firebase": "^10.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
